--- a/README.yaml
+++ b/README.yaml
@@ -5,7 +5,7 @@
 #
 
 # Name of this project
-name : Terraform AWS Cloudwatch Alarms
+name: Terraform AWS Cloudwatch Alarms
 
 # License of this project
 license: "MIT"
@@ -16,7 +16,7 @@ github_repo: clouddrove/terraform-aws-cloudwatch-alarms
 # Badges to display
 badges:
   - name: "Terraform"
-    image: "https://img.shields.io/badge/Terraform-v0.12-green"
+    image: "https://img.shields.io/badge/Terraform-v0.13-green"
     url: "https://www.terraform.io"
   - name: "Licence"
     image: "https://img.shields.io/badge/License-MIT-blue.svg"
@@ -31,12 +31,13 @@ include:
   - "terraform.md"
 
 # How to use this project
-usage : |-
+# yamllint disable rule:line-length
+usage: |-
   Here are some examples of how you can use this module in your inventory structure:
   ### Basic Example
   ```hcl
       module "alarm" {
-        source                    = "https://github.com/clouddrove/terraform-aws-cloudwatch-alarms.git?ref=tags/0.12.4"
+        source                    = "https://github.com/clouddrove/terraform-aws-cloudwatch-alarms.git?ref=tags/0.13.0"
         name                      = "alarm"
         application               = "clouddrove"
         environment               = "test"
@@ -63,7 +64,7 @@ usage : |-
   ### Anomaly Example
   ```hcl
       module "alarm" {
-        source                    = "https://github.com/clouddrove/terraform-aws-cloudwatch-alarms.git?ref=tags/0.12.4"
+        source                    = "https://github.com/clouddrove/terraform-aws-cloudwatch-alarms.git?ref=tags/0.13.0"
         name                      = "alarm"
         application               = "clouddrove"
         environment               = "test"
@@ -101,7 +102,7 @@ usage : |-
   ### Epression Example
   ```hcl
       module "alarm" {
-        source                    = "https://github.com/clouddrove/terraform-aws-cloudwatch-alarms.git?ref=tags/0.12.4"
+        source                    = "https://github.com/clouddrove/terraform-aws-cloudwatch-alarms.git?ref=tags/0.13.0"
         name                      = "alarm"
         application               = "clouddrove"
         environment               = "test"
