--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -20,63 +20,94 @@ jobs:
           aws-region: us-east-2
 
       - name: 'Terraform Format'
-        uses: 'clouddrove/github-actions@v6.0'
+        uses: 'clouddrove/github-actions@v8.0'
         with:
           actions_subcommand: 'fmt'
 
       - name: 'Terraform init anomaly_example'
-        uses: 'clouddrove/github-actions@v6.0'
+        uses: 'clouddrove/github-actions@v8.0'
         with:
           actions_subcommand: 'init'
           tf_actions_working_dir: ./_example/anomaly_example
 
       - name: 'Terraform validate anomaly_example'
-        uses: 'clouddrove/github-actions@v6.0'
+        uses: 'clouddrove/github-actions@v8.0'
         with:
           actions_subcommand: 'validate'
           tf_actions_working_dir: ./_example/anomaly_example
 
       - name: 'Terraform plan anomaly_example'
-        uses: 'clouddrove/github-actions@v6.0'
+        uses: 'clouddrove/github-actions@v8.0'
         with:
           actions_subcommand: 'plan'
           tf_actions_working_dir: ./_example/anomaly_example
 
       - name: 'Terraform init basic_example'
-        uses: 'clouddrove/github-actions@v6.0'
+        uses: 'clouddrove/github-actions@v8.0'
         with:
           actions_subcommand: 'init'
           tf_actions_working_dir: ./_example/basic_example
 
       - name: 'Terraform validate basic_example'
-        uses: 'clouddrove/github-actions@v6.0'
+        uses: 'clouddrove/github-actions@v8.0'
         with:
           actions_subcommand: 'validate'
           tf_actions_working_dir: ./_example/basic_example
 
       - name: 'Terraform plan basic_example'
-        uses: 'clouddrove/github-actions@v6.0'
+        uses: 'clouddrove/github-actions@v8.0'
         with:
           actions_subcommand: 'plan'
           tf_actions_working_dir: ./_example/basic_example
 
       - name: 'Terraform init expression_example'
-        uses: 'clouddrove/github-actions@v6.0'
+        uses: 'clouddrove/github-actions@v8.0'
         with:
           actions_subcommand: 'init'
           tf_actions_working_dir: ./_example/expression_example
 
       - name: 'Terraform validate expression_example'
-        uses: 'clouddrove/github-actions@v6.0'
+        uses: 'clouddrove/github-actions@v8.0'
         with:
           actions_subcommand: 'validate'
           tf_actions_working_dir: ./_example/expression_example
 
       - name: 'Terraform plan expression_example'
-        uses: 'clouddrove/github-actions@v6.0'
+        uses: 'clouddrove/github-actions@v8.0'
         with:
           actions_subcommand: 'plan'
           tf_actions_working_dir: ./_example/expression_example
+
+      - name: 'Slack Notification'
+        uses: clouddrove/action-slack@v2
+        with:
+          status: ${{ job.status }}
+          fields: repo,author
+          author_name: 'CloudDrove'
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # required
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_TERRAFORM }} # required
+        if: always()
+
+  pre-commit:
+    name: 'Pre-Commit'
+    needs:
+      - fmt
+      - anomaly_example
+      - basic_example
+      - expression_example
+    runs-on: ubuntu-latest
+    steps:
+      - name: 'Checkout'
+        uses: actions/checkout@v2.3.4
+
+      - name: 'Install Tflint'
+        run: |
+          curl https://raw.githubusercontent.com/terraform-linters/tflint/master/install_linux.sh | bash
+
+      - name: 'Pre-Commit 🔎'
+        uses: pre-commit/action@v2.0.3
+        continue-on-error: true
 
       - name: 'Slack Notification'
         uses: clouddrove/action-slack@v2
