--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -5,97 +5,124 @@ on:
       - master
 
 jobs:
-  terraform:
-    name: 'Terraform'
+  fmt:
+    name: 'terraform fmt'
     runs-on: ubuntu-latest
     steps:
       - name: 'Checkout'
-        uses: actions/checkout@master
+        uses: actions/checkout@v2.3.4
 
-      - name: Configure AWS Credentials
+      - name: 'Terraform Format'
+        uses: 'clouddrove/github-actions@v8.0'
+        with:
+          actions_subcommand: 'fmt'
+      - name: 'Terraform Format'
+        uses: 'clouddrove/github-actions@v8.0'
+        with:
+          actions_subcommand: 'fmt'
+
+  anomaly_example:
+    name: 'basic_example'
+    runs-on: ubuntu-latest
+    steps:
+      - name: 'Checkout'
+        uses: actions/checkout@v2.3.4
+
+      - name: 'Configure AWS Credentials for anomaly_example'
         uses: clouddrove/configure-aws-credentials@v1
         with:
           aws-access-key-id: ${{ secrets.TEST_AWS_ACCESS_KEY }}
           aws-secret-access-key: ${{ secrets.TEST_AWS_ACCESS_SECRET_KEY }}
           aws-region: us-east-2
 
-      - name: 'Terraform Format'
-        uses: 'clouddrove/github-actions@v8.0'
-        with:
-          actions_subcommand: 'fmt'
-
-      - name: 'Terraform init anomaly_example'
+      - name: 'Terraform init'
         uses: 'clouddrove/github-actions@v8.0'
         with:
           actions_subcommand: 'init'
           tf_actions_working_dir: ./_example/anomaly_example
 
-      - name: 'Terraform validate anomaly_example'
+      - name: 'Terraform validate for anomaly_example'
         uses: 'clouddrove/github-actions@v8.0'
         with:
           actions_subcommand: 'validate'
           tf_actions_working_dir: ./_example/anomaly_example
 
-      - name: 'Terraform plan anomaly_example'
+      - name: 'Terraform plan for anomaly_example'
         uses: 'clouddrove/github-actions@v8.0'
         with:
           actions_subcommand: 'plan'
           tf_actions_working_dir: ./_example/anomaly_example
 
-      - name: 'Terraform init basic_example'
+  basic_example:
+    name: 'basic_example'
+    runs-on: ubuntu-latest
+    steps:
+      - name: 'Checkout'
+        uses: actions/checkout@v2.3.4
+
+      - name: 'Configure AWS Credentials'
+        uses: clouddrove/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.TEST_AWS_ACCESS_KEY }}
+          aws-secret-access-key: ${{ secrets.TEST_AWS_ACCESS_SECRET_KEY }}
+          aws-region: us-east-2
+
+      - name: 'Terraform init'
         uses: 'clouddrove/github-actions@v8.0'
         with:
           actions_subcommand: 'init'
           tf_actions_working_dir: ./_example/basic_example
 
-      - name: 'Terraform validate basic_example'
+      - name: 'Terraform validate'
         uses: 'clouddrove/github-actions@v8.0'
         with:
           actions_subcommand: 'validate'
           tf_actions_working_dir: ./_example/basic_example
 
-      - name: 'Terraform plan basic_example'
+      - name: 'Terraform plan for secure_example'
         uses: 'clouddrove/github-actions@v8.0'
         with:
           actions_subcommand: 'plan'
           tf_actions_working_dir: ./_example/basic_example
 
-      - name: 'Terraform init expression_example'
+  expression_example:
+    name: 'expression_example'
+    runs-on: ubuntu-latest
+    steps:
+      - name: 'Checkout'
+        uses: actions/checkout@v2.3.4
+
+      - name: 'Configure AWS Credentials'
+        uses: clouddrove/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.TEST_AWS_ACCESS_KEY }}
+          aws-secret-access-key: ${{ secrets.TEST_AWS_ACCESS_SECRET_KEY }}
+          aws-region: us-east-2
+
+      - name: 'Terraform init for expression_example'
         uses: 'clouddrove/github-actions@v8.0'
         with:
           actions_subcommand: 'init'
           tf_actions_working_dir: ./_example/expression_example
 
-      - name: 'Terraform validate expression_example'
+      - name: 'Terraform validate for expression_example'
         uses: 'clouddrove/github-actions@v8.0'
         with:
           actions_subcommand: 'validate'
           tf_actions_working_dir: ./_example/expression_example
 
-      - name: 'Terraform plan expression_example'
+      - name: 'Terraform plan for expression_example'
         uses: 'clouddrove/github-actions@v8.0'
         with:
           actions_subcommand: 'plan'
           tf_actions_working_dir: ./_example/expression_example
-
-      - name: 'Slack Notification'
-        uses: clouddrove/action-slack@v2
-        with:
-          status: ${{ job.status }}
-          fields: repo,author
-          author_name: 'CloudDrove'
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # required
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_TERRAFORM }} # required
-        if: always()
 
   pre-commit:
     name: 'Pre-Commit'
     needs:
       - fmt
-      - anomaly_example
       - basic_example
-      - expression_example
+      - secure_example
     runs-on: ubuntu-latest
     steps:
       - name: 'Checkout'
