--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -35,7 +35,7 @@ jobs:
           aws-secret-access-key: ${{ secrets.TEST_AWS_ACCESS_SECRET_KEY }}
           aws-region: us-east-2
 
-      - name: 'Terraform init'
+      - name: 'Terraform init for anomaly_example'
         uses: 'clouddrove/github-actions@v8.0'
         with:
           actions_subcommand: 'init'
@@ -79,7 +79,7 @@ jobs:
           actions_subcommand: 'validate'
           tf_actions_working_dir: ./_example/basic_example
 
-      - name: 'Terraform plan for secure_example'
+      - name: 'Terraform plan for basic_example'
         uses: 'clouddrove/github-actions@v8.0'
         with:
           actions_subcommand: 'plan'
@@ -121,8 +121,9 @@ jobs:
     name: 'Pre-Commit'
     needs:
       - fmt
+      - anomaly_example
       - basic_example
-      - secure_example
+      - expression_example
     runs-on: ubuntu-latest
     steps:
       - name: 'Checkout'
