--- a/.github/workflows/terratest.yml
+++ b/.github/workflows/terratest.yml
@@ -6,47 +6,27 @@ on:
     types: [labeled]
 
 jobs:
-  terraform:
-    name: 'Terraform'
+  Terratest:
+    name: 'terratest'
     runs-on: ubuntu-latest
     steps:
 
       - name: 'Checkout'
-        uses: actions/checkout@master
+        uses: actions/checkout@v2.3.4
 
-      - name: Configure AWS Credentials
+      - name: 'Configure AWS Credentials'
         uses: clouddrove/configure-aws-credentials@v1
         with:
           aws-access-key-id: ${{ secrets.TEST_AWS_ACCESS_KEY }}
           aws-secret-access-key: ${{ secrets.TEST_AWS_ACCESS_SECRET_KEY }}
           aws-region: us-east-2
 
-      - name: 'Terratest anomaly_example'
-        if: ${{ github.event.label.name == 'terratest' }}
+      - name: 'terratest'
         uses: 'clouddrove/github-actions@v9.0.2'
         with:
           actions_subcommand: 'terratest'
-          tf_actions_working_dir: '_test/anomaly_example'
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: 'Terratest basic_example'
-        if: ${{ github.event.label.name == 'terratest' }}
-        uses: 'clouddrove/github-actions@v9.0.2'
-        with:
-          actions_subcommand: 'terratest'
-          tf_actions_working_dir: '_test/basic_example'
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: 'Terratest expression_example'
-        if: ${{ github.event.label.name == 'terratest' }}
-        uses: 'clouddrove/github-actions@v9.0.2'
-        with:
-          actions_subcommand: 'terratest'
-          tf_actions_working_dir: '_test/expression_example'
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          if: ${{ github.event.label.name == 'terratest' }}
+          tf_actions_working_dir: '_test'
 
       - name: 'Slack Notification'
         uses: clouddrove/action-slack@v2
