--- a/README.yaml
+++ b/README.yaml
@@ -45,25 +45,29 @@ usage: |-
       module "alarm" {
         source                    = "clouddrove/cloudwatch-alarms/aws"
         version                   = "1.3.0"
-        name                      = "alarm"
-        environment               = "test"
-        label_order               = ["name", "environment"]
-        alarm_name                = "cpu-alarm"
-        comparison_operator       = "LessThanThreshold"
-        evaluation_periods        = 2
-        metric_name               = "CPUUtilization"
-        namespace                 = "AWS/EC2"
-        period                    = "60"
-        statistic                 = "Average"
-        threshold                 = "40"
-        alarm_description         = "This metric monitors ec2 cpu utilization"
-        alarm_actions             = ["arn:aws:sns:eu-west-1:xxxxxxxxxxx:test"]
+        name        = "alarm"
+        environment = "test"
+        label_order = ["name", "environment"]
+      
+      
+        alarm_name          = "cpu-alarm"
+        comparison_operator = "GreaterThanOrEqualToThreshold"
+        evaluation_periods  = 2
+        metric_name         = "CPUUtilization"
+        namespace           = "AWS/EC2"
+        period              = 60
+        statistic           = "Average"
+        threshold           = 40
+        alarm_description   = "This metric monitors ec2 cpu utilization"
+        alarm_actions       = []
+      
         actions_enabled           = true
         insufficient_data_actions = []
         ok_actions                = []
-        dimensions                = {
-                      instance_id = "i-xxxxxxxxxxxxx"
+        dimensions = {
+          instance_id = module.ec2.instance_id[0]
         }
+
     }
   ```
 
@@ -72,20 +76,21 @@ usage: |-
       module "alarm" {
         source                    = "clouddrove/cloudwatch-alarms/aws"
         version                   = "1.3.0"
-        name                      = "alarm"
-        environment               = "test"
-        label_order               = ["name", "environment"]
-        alarm_name                = "cpu-alarm"
-        comparison_operator       = "GreaterThanUpperThreshold"
-        evaluation_periods        = 2
-        threshold_metric_id       = "e1"
-        query_expressions         = [{
+        name        = "alarm"
+        environment = "test"
+        label_order = ["name", "environment"]
+      
+        alarm_name          = "cpu-alarm"
+        comparison_operator = "GreaterThanUpperThreshold"
+        evaluation_periods  = 2
+        threshold_metric_id = "e1"
+        query_expressions = [{
           id          = "e1"
           expression  = "ANOMALY_DETECTION_BAND(m1)"
           label       = "CPUUtilization (Expected)"
           return_data = "true"
         }]
-        query_metrics             = [{
+        query_metrics = [{
           id          = "m1"
           return_data = "true"
           metric_name = "CPUUtilization"
@@ -93,16 +98,17 @@ usage: |-
           period      = "120"
           stat        = "Average"
           unit        = "Count"
-          dimensions  = {
+          dimensions = {
             InstanceId = module.ec2.instance_id[0]
           }
         }]
-        alarm_description         = "This metric monitors ec2 cpu utilization"
-        alarm_actions             = []
+        alarm_description = "This metric monitors ec2 cpu utilization"
+        alarm_actions     = []
+      
         actions_enabled           = true
         insufficient_data_actions = []
         ok_actions                = []
-    }
+      }
   ```
 
   ### Epression Example
@@ -110,36 +116,50 @@ usage: |-
       module "alarm" {
         source                    = "clouddrove/cloudwatch-alarms/aws"
         version                   = "1.3.0"
-        name                      = "alarm"
-        environment               = "test"
-        label_order               = ["name", "environment"]
-        expression_enabled        = true
-        alarm_name                = "cpu-alarm"
-        comparison_operator       = "GreaterThanUpperThreshold"
-        evaluation_periods        = 2
-        threshold                 = 40
-        query_expressions         = [{
+        name        = "alarm"
+        environment = "test"
+        label_order = ["name", "environment"]
+            
+        expression_enabled  = true
+        alarm_name          = "cpu-alarm"
+        comparison_operator = "GreaterThanOrEqualToThreshold"
+        evaluation_periods  = 2
+        threshold           = 40
+        query_expressions = [{
           id          = "e1"
-          expression  = "ANOMALY_DETECTION_BAND(m1)"
-          label       = "CPUUtilization (Expected)"
+          expression  = "m2/m1*100"
+          label       = "Error Rate"
           return_data = "true"
         }]
-        query_metrics             = [{
-          id          = "m1"
-          return_data = "true"
-          metric_name = "CPUUtilization"
-          namespace   = "AWS/EC2"
-          period      = "120"
-          stat        = "Average"
-          unit        = "Count"
-          dimensions  = {
-            InstanceId = module.ec2.instance_id[0]
-          }
+        query_metrics = [
+          {
+            id          = "m1"
+            metric_name = "RequestCount"
+            namespace   = "AWS/ApplicationELB"
+            period      = "120"
+            stat        = "Sum"
+            unit        = "Count"
+            return_data = null
+            dimensions = {
+              LoadBalancer = "app/web"
+            }
+            }, {
+            id          = "m2"
+            metric_name = "HTTPCode_ELB_5XX_Count"
+            namespace   = "AWS/ApplicationELB"
+            period      = "120"
+            stat        = "Sum"
+            unit        = "Count"
+            return_data = null
+            dimensions = {
+              LoadBalancer = "app/web"
+            }
         }]
-        alarm_description         = "This metric monitors ec2 cpu utilization"
-        alarm_actions             = []
+        alarm_description = "This metric monitors ec2 cpu utilization"
+        alarm_actions     = []
+      
         actions_enabled           = true
         insufficient_data_actions = []
         ok_actions                = []
-    }
+      }
   ```
