--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -22,6 +22,10 @@ jobs:
         with:
           ref: ${{ github.sha }}
 
+      - uses: dominikh/staticcheck-action@v1.3.0
+        with:
+          version: "2022.1.3"
+
       - name: Approve a PR for Github Bot
         if: ${{steps.get-status.outputs.all-checks-completed == 'true' &&  steps.get-status.outputs.all-checks-passed == 'true'}}      
         run: gh pr review --approve "$PR_URL"
