--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -8,7 +8,7 @@ permissions:
 
 jobs:
   static-checks:
-    name: Auto Approve a PR by dependabot 
+    name: Check the status of static checks 
     runs-on: ubuntu-latest
     if: github.actor == 'dependabot[bot]'
     strategy:
@@ -18,7 +18,7 @@ jobs:
       - name: Wait for "${{ matrix.tf-checks }}" to succeed
         uses: lewagon/wait-on-check-action@v1.0.0
         with:
-          ref: ${{ github.event.pull_request.head.sha }}
+          ref: ${{ github.sha }}:${{ github.event.pull_request.head.sha }}
           check-name: ${{ matrix.tf-checks }}
           repo-token: ${{ secrets.GITHUB_TOKEN }}
           wait-interval: 10
