--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -15,12 +15,15 @@ jobs:
       matrix:
         tf-checks: ["tf-lint", "tfsec", "tf-checks"]    
     steps:
+      - name: 'Checkout'
+        id: checkout
+        uses: actions/checkout@v2.3.4 
       - name: Wait for "${{ matrix.tf-checks }}" to succeed
         uses: lewagon/wait-on-check-action@v1.0.0
         with:
           ref: ${{ github.sha }}:${{ github.event.pull_request.head.sha }}
           check-name: ${{ matrix.tf-checks }}
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
+          repo-token: ${{ secrets.GITHUB }}
           wait-interval: 10
 
   autoapprove:
