--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -1,7 +1,7 @@
 name: Auto approve and merge PRs by dependabot
 on:
   pull_request:
-
+    types: [opened,synchronize]
 permissions:
   contents: write
   pull-requests: write
@@ -21,7 +21,7 @@ jobs:
       - name: Wait for "${{ matrix.tf-checks }}" to succeed
         uses: lewagon/wait-on-check-action@v1.0.0
         with:
-          ref: ${{ github.sha }}
+          ref: ${{ github.event.pull_request.head.sha }}
           check-name: ${{ matrix.tf-checks }}
           repo-token: ${{ secrets.GITHUB }}
           wait-interval: 10
