--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -16,7 +16,7 @@ jobs:
         uses: lewagon/wait-on-check-action@v1.0.0
         with:
           ref: ${{ github.event.pull_request.head.sha }}
-          check-name: 'Static test checks'
+          check-name: 'tf-lint / tflint'
           repo-token: ${{ secrets.GITHUB }}
           wait-interval: 30
 
