--- a/README.yaml
+++ b/README.yaml
@@ -76,6 +76,7 @@ usage: |-
         insufficient_data_actions = []
         ok_actions                = []
         treat_missing_data        = "ignore"
+        datapoints_to_alarm       = 2
         dimensions = {
           instance_id = module.ec2.instance_id[0]
         }
